@@ -2,7 +2,7 @@ NAME
     Dist::Zilla::PluginBundle::AJGB - Dist::Zilla plugins for AJGB
 
 VERSION
-    version 2.03
+    version 2.04
 
 SYNOPSIS
         # dist.ini
@@ -25,11 +25,10 @@ DESCRIPTION
         [Test::Compile]
         [PodCoverageTests]
         [PodSyntaxTests]
-        [EOLTests]
-        [NoTabsTests]
-        [KwaliteeTests]
+        [Test::EOL]
+        [Test::NoTabs]
+        [Test::Kwalitee]
         [Test::Portability]
-        [Test::Synopsis]
 
         [PruneCruft]
         [ManifestSkip]
@@ -43,9 +42,14 @@ DESCRIPTION
 
         [MetaConfig]
         [AutoMetaResources]
-        bugtracker.rt = 1
+        bugtracker.github = user:ajgb
         repository.github = user:ajgb
-        homepage = http://search.cpan.org/dist/%{dist}
+        homepage = https://metacpan.org/release/%{dist}
+
+        [Prereqs / TestRequires]
+        Test::Pod::Coverage = 0
+        Test::Pod = 0
+        Pod::Coverage::TrustPod = 0
 
         [AutoPrereqs]
         [MakeMaker]
@@ -89,7 +93,7 @@ AUTHOR
     Alex J. G. Burzyński <ajgb@cpan.org>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2012 by Alex J. G. Burzyński
+    This software is copyright (c) 2015 by Alex J. G. Burzyński
     <ajgb@cpan.org>.
 
     This is free software; you can redistribute it and/or modify it under
