@@ -2,7 +2,7 @@ name    = Dist-Zilla-PluginBundle-AJGB
 author  = Alex J. G. Burzyński <ajgb@cpan.org>
 license = Perl_5
 copyright_holder = Alex J. G. Burzyński <ajgb@cpan.org>
-copyright_year   = 2012
+copyright_year   = 2015
 
 [ExecDir]
 [ShareDir]
@@ -18,11 +18,10 @@ exclude_filename = weaver.ini
 [Test::Compile]
 [PodCoverageTests]
 [PodSyntaxTests]
-[EOLTests]
-[NoTabsTests]
-[KwaliteeTests]
+[Test::EOL]
+[Test::NoTabs]
+[Test::Kwalitee]
 [Test::Portability]
-;[Test::Synopsis]
 
 
 [PruneCruft]
@@ -37,9 +36,14 @@ config_plugin = @AJGB
 
 [MetaConfig]
 [AutoMetaResources]
-bugtracker.rt = 1
+bugtracker.github = user:ajgb
 repository.github = user:ajgb
-homepage = http://search.cpan.org/dist/%{dist}
+homepage = https://metacpan.org/release/%{dist}
+
+[Prereqs / TestRequires]
+Test::Pod::Coverage = 0
+Test::Pod = 0
+Pod::Coverage::TrustPod = 0
 
 [AutoPrereqs]
 [MakeMaker]
